tests/baselines/reference/propertyNamedPrototype.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/propertyNamedPrototype.ts(3,5): error TS2300: Duplicate identifier 'prototype'.


==== tests/cases/conformance/classes/propertyMemberDeclarations/propertyNamedPrototype.ts (1 errors) ====
    class C {
        prototype: number; // ok
        static prototype: C; // error
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier 'prototype'.
    }